# my-discord-bot

./: .dockerignore  .env.example  .gallery-dl.conf  .gitignore  Dockerfile  README.md  TODO.md  alembic.ini  app.cfg  bot.py  compose.yaml  docker-compose.yaml  docker-compose.yml  init.sh  main.py  pyproject.toml  requirements.txt  startup.bat  steam.py  stock.py  test.py
.github/workflows/: docker.yaml
DB_scripts/: create_GuildInfo.sql  create_SteamBlacklist.sql  create_SteamGiveawayHistory.sql  create_guildInfo.sql  create_steam_Blacklist.sql  create_steam_GiveawayHistory.sql
assets/gallery-dl/: config.json
migrations/: env.py
migrations/versions/: 93832be8c5ae_first_migration.py  a29aedea6bce_first_migration.py  fec7b1c16b86_add_subscription.py
scripts/: bot.py  utility.py
scripts/modules/: finance.py  general.py  meta.py  music.py  steam.py  stock.py  touhou.py
src/: __init__.py  bot.py
src/cogs/: __init__.py  _cog_base.py  ai.py  cog_base.py  error_handler.py  general.py  meta.py  music.py  steam.py
src/models/: __init__.py  _guid.py  _model_base.py  guild.py  guild_info.py  guild_task.py  model_base.py  steam_blacklist.py  steam_giveaway_history.py
src/my_discord_bot/: __init__.py  __main__.py  bot.py
src/my_discord_bot/cogs/: __init__.py  _cog_base.py  ai.py  error_handler.py  general.py  meta.py  music.py  subscription.py
src/my_discord_bot/models/: __init__.py  _model_base.py  guild.py  subscription.py  subscription_announcement.py
