[project]
name = "my-discord-bot"
version = "4.1.0"
description = "Discord Bot by Reguna"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.*",
    "aiosqlite==0.*",
    "alembic==1.*",
    "discord-py[voice]==2.*",
    "gallery-dl==1.*",
    "openai==1.*",
    "pygit2==1.*",
    "python-dotenv==1.*",
    "sqlalchemy[asyncio]==2.0.*",
    "wavelink==3.*",
]

[dependency-groups]
dev = ["ipykernel", "ruff"]

[tool.pyright]
reportCallInDefaultInitializer = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
